--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ nav .fa{
         margin: 30px;
     }
 }
+
 /* Course*/
 .course{
     width: 80%;
@@ -166,7 +167,7 @@ nav .fa{
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top:50px ;
+    padding-top:90px ;
 }
 .campus-col{
     flex-basis: 32%;
@@ -174,6 +175,9 @@ nav .fa{
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
+}
+.campus h1{
+    font-size: 30px;
 }
 .campus-col img{
     width: 100%;
@@ -215,6 +219,9 @@ nav .fa{
     text-align: center;
     padding-top: 100px;
 }
+.facilities h1{
+    font-size: 40px;
+}
 .facilities-col{
     flex-basis: 32%;
     border-radius: 10px;
@@ -230,7 +237,94 @@ nav .fa{
     padding: 0;
 }
 .facilities-col h3{
-    margin-top: 5px;
-    margin-bottom: 1px;
+    margin-top: 16px;
+    margin-bottom: 15px;
     text-align: left;
 }
+/* Testimonials*/
+.Testimonials{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top:100px ;
+}
+.Testimonials-col{
+    flex-basis: 40%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+.Testimonials-col img{
+    height: 90px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+
+}
+.Testimonials-col p{
+    padding: 0;
+}
+.Testimonials-col h3{
+    margin-top: 15px;
+    text-align: left;
+}
+.Testimonials-col .fa{
+    color: #f44336;
+}
+@media(max-width: 700px){
+    .Testimonials-col img{       
+        margin-left: 0px;
+        margin-right: 15px;
+        
+    }
+}
+/*  call to action*/
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(Images/banner2.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+
+}
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
+
+/* Footer*/
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.icons .fa{
+    color: #f44336;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+}
+.fa-heart-o{
+    color:#f44336 ;
+}
+
+
+
