--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+}
+.main{
+    background-color: white;
+    opacity: 0;
+    display: none;
+    transition: opacity 1s ease-in;
 }
 .header{
     min-height: 100vh;
